latest post trying a variant of the text-align bug fix

--- a/assets/css/3-sections/_home-latestpost.sass
+++ b/assets/css/3-sections/_home-latestpost.sass
@@ -1,7 +1,8 @@
 section.latestpost
     background: white
-    
+    text-align: center
     .flex.flexcenter
+        text-align: justify
         .col-2
             margin: 24px 0 54px 0
             
